# AIT

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  NOTES.txt  README.md  env.template  environment.yaml  makefile  pyproject.toml
apps/backend/: main.py
apps/backend/services/: etrade_api.py
apps/backend/services/analysis_svc/: api.py
apps/backend/services/marketdata_svc/: api.py
apps/backend/services/portfolio_svc/: stubs.py
apps/frontend/: index.html  package-lock.json  package.json  vite.config.mts
apps/frontend/src/: main.tsx  types.ts
apps/frontend/src/components/: InsightBadge.tsx  InsightCard.tsx  Sparkline.tsx
apps/frontend/src/pages/: Insights.tsx
docs/: architecture.md
libs/brokers/etrade/: client.py  token_store.py
libs/md/norgate/: client.py
libs/utils/: cache.py
ml/registry/: loader.py  momo_trend.yaml
ml/strategies/: holdings_review.py  momo_trend.py
pipelines/: backtest_job.py  build_features.py  daily_scores.py  ingest_norgate.py  mock_ingest.py
scripts/: dev.sh  etrade_oob.sh  etrade_portfolio_test.py  example.sh  visibility-gh.zsh
src/: app.py
src/ai_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: prepare_golden.py  test_momo_trend_golden.py
tests/data/: README.md
